--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/register": "^7.18.9",
     "chai": "^4.3.7",
     "commitizen": "^4.2.6",
+    "conventional-changelog-cli": "^2.2.2",
     "cross-var": "^1.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "mocha": "^10.2.0",
